<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menor"
                app:strokeColor="#00FFFFFF" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:src="@drawable/images" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_Masa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:text="@string/masa"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/et_Salsa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:text="@string/salsa"
                tools:ignore="LabelFor,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/et_Ingredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:text="@string/ingredientes"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_Cabecera1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/elije_tu_tama_o"
                android:inputType="text"
                android:textColorHint="#546E7A" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/rb_Ssize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/s" />

                    <RadioButton
                        android:id="@+id/rb_Msize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/m" />

                    <RadioButton
                        android:id="@+id/rb_Lsize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/l" />

                    <RadioButton
                        android:id="@+id/rb_XLsize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/xl" />
                </LinearLayout>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cabecera2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tipo_de_masa" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/rb_masaClasica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clasica" />

                    <RadioButton
                        android:id="@+id/rb_masaIntegral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/integral" />
                </LinearLayout>

            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/rb_masaSinGluten"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sin_gluten" />

                    <RadioButton
                        android:id="@+id/rb_masaFina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/finisima" />
                </LinearLayout>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_selecIngredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientes_seleccionados" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="219dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cb_peperoni"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/peperoni" />

                    <CheckBox
                        android:id="@+id/cb_pimiento"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pimineto" />

                    <CheckBox
                        android:id="@+id/cb_atun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atun" />

                    <CheckBox
                        android:id="@+id/cb_Jserrano"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jamon_serrano" />

                    <CheckBox
                        android:id="@+id/cb_piña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pi_a" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cb_maiz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/maiz" />

                    <CheckBox
                        android:id="@+id/cb_champis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/champis" />

                    <CheckBox
                        android:id="@+id/cb_JYork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jamon_york" />

                    <CheckBox
                        android:id="@+id/cb_olivas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/olivas_negras" />

                    <CheckBox
                        android:id="@+id/cb_quesos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_quesos" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/b_pago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continuar_al_pago"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>